syntax = "proto3";
package grpc.comunidad;

option java_package = "com.github.erodriguezg.grpcjavalab.api.grpc";
option java_multiple_files = true;
option java_outer_classname = "ComunidadServiceGrpcOuter";

message BuscarComunidadesRequestMsg {
    string id_comunidad = 1;
    int32 id_comunidad_tipo = 2;
    int32 id_comuna = 3;
    int32 id_provincia = 4;
    int32 id_region = 5;
    string nombre = 6;
    string direccion = 7;
    int32 page_size = 8;
    int32 page_number = 9;
}

message ComunidadMsg {
    string id = 1;
    string nombre = 2;
    string direccion = 3;
    int32 tipo_id = 4;
    string tipo_nombre = 5;
    int32 comuna_id = 6;
    string comuna_nombre = 7;
    int32 provincia_id = 8;
    string provincia_nombre = 9;
    int32 region_id = 10;
    string region_nombre = 11;
}

message BuscarComunidadesResponseMsg {
  repeated ComunidadMsg items = 1;
  int32 page_number = 2;
  int32 page_size = 3;
  int32 total_pages = 4;
  int64 total_elements = 5;
}

service ComunidadService {
  rpc BuscarComunidades(BuscarComunidadesRequestMsg) returns (BuscarComunidadesResponseMsg);
}
